<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:animateLayoutChanges="true"
        android:background="#30000000"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="32sp"
            tools:text="0m 00s" />

        <ImageView
            android:id="@+id/backspace"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_backspace"
            app:tint="@color/textColorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/number_one"
            android:textSize="32sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/number_two"
            android:textSize="32sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/number_three"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/number_four"
            android:textSize="32sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/number_five"
            android:textSize="32sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/number_six"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/number_seven"
            android:textSize="32sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/number_eight"
            android:textSize="32sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/number_nine"
            android:textSize="32sp" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/zero"
        android:layout_width="121dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/number_zero"
        android:textSize="32sp" />

</LinearLayout>