<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?selectableItemBackground"
    android:orientation="horizontal"
    android:paddingBottom="18dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="18dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_default_alarm_ringtone"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp"
            android:visibility="visible"
            android:paddingTop="2dp"
            tools:text="@string/description_default" />
    </LinearLayout>

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/title_sound_none"
        android:textColor="?android:textColorSecondary"
        android:textSize="16sp" />
</LinearLayout>
