<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="512dp"
    android:minWidth="350dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:animateLayoutChanges="true"
            android:background="#30000000"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="32sp"
                tools:text="0m 00s" />

            <ImageView
                android:id="@+id/backspace"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerInside"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_backspace" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/number_one"
                android:textSize="32sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/number_two"
                android:textSize="32sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/number_three"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/number_four"
                android:textSize="32sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/number_five"
                android:textSize="32sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/number_six"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/number_seven"
                android:textSize="32sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/number_eight"
                android:textSize="32sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/number_nine"
                android:textSize="32sp" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/zero"
            android:layout_width="121dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/number_zero"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ringtone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:id="@+id/ringtoneImage"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:alpha="0.333"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_ringtone_disabled" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ringtoneText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/title_sound_none"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_expand"
            app:tint="@color/md_theme_onPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vibrate"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:id="@+id/vibrateImage"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_vibrate" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/title_vibrate"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:text="@android:string/cancel"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:text="@string/title_start_timer"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>