<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/title_background_mode"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/segmented_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_color"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_color"
                app:backgroundTint="@color/button_tint" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_image"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_image"
                app:backgroundTint="@color/button_tint" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>
</LinearLayout>
